# Research

./: FindOPENCL.cmake
OPENCL/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.cpp
SimpleOpenCL_WithExamples/example1/: test
SimpleOpenCL_WithExamples/example2/: main  main.c
TestBCC/: BinomialConvolver.cpp  BinomialConvolver.h  CMakeLists.txt  cll.cp  cudaKernel.cu  main.cpp  para.cpp  para.h
TestBCC/DGtal/base/: Config.h
TestBCC/cmake/: FindOpenCl.cmake
TestBCC/lib/: libDGtal.dylib  libDGtalIO.dylib
TestContourShow/: CMakeLists.txt  main.cpp
TestDSL/: CMakeLists.txt  TestDSL.cpp  dsl.cl
TestFreeman/: CMakeLists.txt  freemanChainFromImage.cpp
cookbook/: CMakeLists.txt
cookbook/tutorial-examples/: freemanChainFromImage.cpp  imageGridCurveEstimator.cpp
images/: QAcircle.pgm  circle.pgm  circle2.pgm  circle3.pgm  im1.pgm  project2.pgm  rabbit.pgm
testDSS/: TestDSL.cpp
