PROJECT(Test)
#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
FIND_PACKAGE(DGtal REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(ITK REQUIRED) 

include(${ITK_USE_FILE})
if (ITKVtkGlue_LOADED)
  find_package(VTK REQUIRED)
  include(${VTK_USE_FILE})
else()
  find_package(ItkVtkGlue REQUIRED)
  include(${ItkVtkGlue_USE_FILE})
  set(Glue ItkVtkGlue)
endif()

INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
ADD_EXECUTABLE(TestDSL TestDSL)
TARGET_LINK_LIBRARIES(TestDSL ${DGTAL_LIBRARIES})
